# pri-ir-ctrl

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/ir/: button.h  led.h  necx.h  server.h  util.h  wave.h
src/: button.cpp  led.cpp  main.cpp  necx.cpp  server.cpp  wave.cpp
